--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  color: hsl(210, 10%, 33%);
+}
+
 h2 {
   font-size: 1.85rem;
   font-weight: 600;
@@ -41,6 +47,12 @@ picture {
 button {
   display: block;
   margin: 0 auto;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  color: hsl(210, 10%, 33%);
 }
 
 h2 {
