--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 600;
   color: hsl(210, 10%, 33%);
 }
@@ -32,7 +32,8 @@ p {
   font-size: 18px;
 }
 
-section {
+section,
+article {
   max-width: 85%;
 }
 
@@ -50,7 +51,7 @@ button {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 600;
   color: hsl(210, 10%, 33%);
 }
@@ -170,7 +171,10 @@ body {
   margin-block: 0.5em;
 }
 .clipboard__info-text {
+  max-width: 90%;
   margin-block: 0 3em;
+}
+.clipboard__info-text p {
   max-width: 55ch;
 }
 .clipboard__info-text h2 {
