--- a/styles/style.scss
+++ b/styles/style.scss
@@ -124,14 +124,16 @@ body {
 	}
 
 	&__sponsors {
+		width: 90%;
+		margin-inline: auto;
 		margin-block: 0 5em;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 3em;
+		gap: 10vw;
 
 		& > * {
-			max-height: 7.5vmax;
+			max-height: 5vmax;
 		}
 	}
 
