--- a/styles/_breakpoint.scss
+++ b/styles/_breakpoint.scss
@@ -53,7 +53,7 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: center;
-			gap: 1em;
+			gap: 3vw;
 			max-width: 90%;
 			
 			& .sponsor {
