--- a/styles/style.css
+++ b/styles/style.css
@@ -181,14 +181,16 @@ body {
   margin-block: 0.5em;
 }
 .clipboard__sponsors {
+  width: 90%;
+  margin-inline: auto;
   margin-block: 0 5em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3em;
+  gap: 10vw;
 }
 .clipboard__sponsors > * {
-  max-height: 7.5vmax;
+  max-height: 5vmax;
 }
 .clipboard__footer-nav {
   background-color: whitesmoke;
@@ -269,7 +271,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 1em;
+    gap: 3vw;
     max-width: 90%;
   }
   .clipboard__sponsors .sponsor {
