--- a/styles/style.scss
+++ b/styles/style.scss
@@ -131,9 +131,10 @@ body {
 		flex-direction: column;
 		align-items: center;
 		gap: 10vw;
+		width: 90%;
 
 		& > * {
-			max-height: 5vmax;
+			max-height: 5vw;
 		}
 	}
 
